# derbyboard

./: .gitignore  Cargo.toml  README.md
src/: clock.rs  gamestate.rs  guard.rs  jamstate.rs  main.rs  mobilejt.html  mobilejt.js  penalties.html  penalties.js  penaltycodes.rs  roster.rs  scoreboard.html  scoreboard.js  scoresheet.html  scoresheet.js  startgame.hbs  staticpages.rs  timetoderby.rs
src/gamestate/: clock.rs  jamstate.rs  mod.rs
