[package]
name = "derbyboard"
version = "0.1.0"
authors = ["Teapotahedron <teapot@teapotahedron.com>"]

[dependencies]
rocket = "0.2.0"
rocket_codegen = "0.2.0"
rocket_contrib = "0.2.0"
serde = "^0.9"
serde_json = "^0.9.8"
serde_derive = "^0.9"
lazy_static = "*"
chrono = "*"
handlebars = { version = "0.25.2", features = [ "serde_type" ] }
derbyjson = "0.0.2"