[package]
name = "derbyboard"
version = "0.1.0"
authors = ["Teapotahedron <teapot@teapotahedron.com>"]

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"
rocket_contrib = "0.3.0"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
lazy_static = "*"
chrono = "*"
handlebars = "^0.29.1"
derbyjson = { version = "*", path = "../derbyjson" }
